feat: trocando api da google pela GROQ (nao do elon musk)